--- a/hjq/hjq.cabal
+++ b/hjq/hjq.cabal
@@ -25,7 +25,9 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      Data.Hjq
+      Data.Hjq.Parser
+      Data.Hjq.Query
   other-modules:
       Paths_hjq
   autogen-modules:
@@ -34,7 +36,17 @@ library
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , aeson-pretty
+    , attoparsec
+    , base >=4.7 && <5
+    , bytestring
+    , errors
+    , lens
+    , lens-aeson
+    , text
+    , unordered-containers
+    , vector
   default-language: Haskell2010
 
 executable hjq-exe
@@ -47,14 +59,25 @@ executable hjq-exe
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , aeson-pretty
+    , attoparsec
+    , base >=4.7 && <5
+    , bytestring
+    , errors
     , hjq
+    , lens
+    , lens-aeson
+    , text
+    , unordered-containers
+    , vector
   default-language: Haskell2010
 
 test-suite hjq-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      ParserTest
       Paths_hjq
   autogen-modules:
       Paths_hjq
@@ -62,6 +85,17 @@ test-suite hjq-test
       test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      HUnit
+    , aeson
+    , aeson-pretty
+    , attoparsec
+    , base >=4.7 && <5
+    , bytestring
+    , errors
     , hjq
+    , lens
+    , lens-aeson
+    , text
+    , unordered-containers
+    , vector
   default-language: Haskell2010
